weighting and category change requests

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           <h5 class="subcat">Natural &nbsp; <small><span class="disasters weight"></span></small></h5>
         	<div class="sliders need" id="disasters"></div>
           <h5 class="subcat">Conflict &nbsp; <small><span class="conflict weight"></span></small></h5>
-          <div class="sliders entry" id="conflict"></div>
+          <div class="sliders need" id="conflict"></div>
           <h5 class="subcat">Institutional/ infrastructure weakness &nbsp; <small><span class="coping weight"></span></small></h5>
           <div class="sliders need" id="coping"></div>
           <h5 class="subcat">People affected by disasters &nbsp; <small><span class="emdat weight"></span></small></h5>
@@ -170,17 +170,12 @@
         <h3>Available funding &nbsp;<i id="funding" class="toggle-group fa fa-toggle-on" onclick="toggleGroup(this);"></i></h3>
         <hr>
         <div class="subcat-group">
-          <!-- <h5 class="subcat">Top 21 humanitarian assistance recipients &nbsp; <small><span class="recip weight"></span></small></h5>
-        	<div class="sliders funding" id="recip"></div> -->
           <h5 class="subcat">USAID &nbsp; <small><span class="usaid weight"></span></small></h5>
           <div class="sliders funding" id="usaid"></div>
           <h5 class="subcat">Migh migration to USA &nbsp; <small><span class="usmigr weight"></span></small></h5>
           <div class="sliders funding" id="usmigr"></div>
           <h5 class="subcat">Presence of top 25 companies &nbsp; <small><span class="top25 weight"></span></small></h5>
           <div class="sliders funding" id="top25"></div>
-          <h5 class="subcat">Official development assistance (ODA) &nbsp; <small><span class="oda weight"></span></small></h5>
-          <div class="sliders funding" id="oda"></div>
-
 
         </div>
       </div>
@@ -192,15 +187,6 @@
           <div class="sliders entry" id="security"></div>
           <h5 class="subcat">Presence of IFRC office &nbsp; <small><span class="ifrcoffice weight"></span></small></h5>
         	<div class="sliders entry" id="ifrcoffice"></div>
-          <h4>Disaster contributions</h4>
-          <h5 class="subcat">ARC disaster deployments &nbsp; <small><span class="irocpeople weight"></span></small></h5>
-          <div class="sliders entry" id="irocpeople"></div>
-          <h5 class="subcat">ARC disaster money &nbsp; <small><span class="iroccash weight"></span></small></h5>
-          <div class="sliders entry" id="iroccash"></div>
-          <h5 class="subcat">CTP response (all IFRC appeals) &nbsp; <small><span class="ctpall weight"></span></small></h5>
-        	<div class="sliders entry" id="ctpall"></div>
-          <h5 class="subcat">CTP response (ARC) &nbsp; <small><span class="ctparc weight"></span></small></h5>
-        	<div class="sliders entry" id="ctparc"></div>
           <h4>ISD presence</h4>
           <h5 class="subcat">Staff &nbsp; <small><span class="isdstaff weight"></span></small></h5>
           <div class="sliders entry" id="isdstaff"></div>
@@ -238,7 +224,11 @@
         </div>
 
       </div>
+    </div>
+    <div class="row">
+      <div class="pull-right">
       <a class="info-icon" onclick="quickSetSliders('zero')"> zero out all sliders</a> &nbsp; <small>|</small> &nbsp; <a class="info-icon" onclick="quickSetSliders('default')"> default values</a>
+      </div>
     </div>
 
 <hr>
